--- a/calculator.html
+++ b/calculator.html
@@ -86,7 +86,7 @@
   <!--Cards for variable inputs-->
   <section class="container">
 
-    <form name="dzCalculator" id="dzCalculator" onsubmit="openModal()">
+    <form name="dzCalculator" id="dzCalculator">
       <div class="row">
         <div class="col-12 title-div">
           <div class="container heading-background heading-padding heading-margin">
@@ -497,11 +497,11 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="assets/scripts/dependencies.js"></script>
   <script src="assets/scripts/calculator.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="jH6xsmAN"></script>
-  <script src="assets/scripts/dependencies.js"></script>
-
+  
 </body>
 
 </html>
