--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
 <div class="row pb-2">
 <div class="media">
 <!-- Author image appears on the left on medium and large devices -->
-  <img class="align-self-center author-img mr-3 img-fluid d-sm-none d-md-block" src="assets/images/author-questions.png" alt="The author">
+  <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block" src="assets/images/author-questions.png" alt="The author">
   <div class="media-body">
     <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
-    <!-- Author image appears under header on small devices -->
-    <img class="mx-auto author-img mr-3 img-fluid d-none d-sm-block d-md-none" src="assets/images/author-questions.png" alt="The author">
-    <p>Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national curriculms of New Zealand, Australia and Sweden.</p>
-    <p class="mb-0">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's 
+    <!-- Author image appears next to header on small devices -->
+    <img class="author-img center img-fluid d-xs-block d-sm-block d-md-block d-lg-none" src="assets/images/author-questions-small.jpg" alt="The author">
+    <p class="mx-2">Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national curriculms of New Zealand, Australia and Sweden.</p>
+    <p class="mb-0 mx-2">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's 
     passion for differentiation and full classroom inclusion with easy, self guided instruction, and Physics Code is born.</p>
   </div>
 </div>
