--- a/refactor_test_yourself.html
+++ b/refactor_test_yourself.html
@@ -247,7 +247,7 @@
               <i class="fas fa-car-battery fa2x"></i> Scene</button>
               <button 
               class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
-              id="current-map-1" 
+              id="Onecurrent" 
               data-toggle="modal" 
               data-target="#map-1-scene-1" 
               disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
@@ -464,13 +464,13 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>The initial velocity is <strong><span id="map-1-initialVelocity"></span></strong></p>
-          <p>Yellow light phase is <strong><span id="map-1-ylPhase"></span></strong></p>
-          <p>The interphase is <strong><span id="map-1-rlPhase"></span></strong></p>
-          <p>The driver's reaction time is <strong><span id="map-1-rtRandom"></span></strong></p>
-          <p>The vehicle's tire conditions are described as <strong><span id="map-1-tireCondition"></span></strong></p>
-          <p>The weather conditions are described as <strong><span id="map-1-weatherCondition"></span></strong></p>
-          <p>The vehicle is <strong><span id="map-1-carLength"></span></strong> m long</p>
+          <p>The initial velocity is <strong><span id="OneinitialVelocity"></span></strong></p>
+          <p>Yellow light phase is <strong><span id="OnePhase"></span></strong></p>
+          <p>The interphase is <strong><span id="OnerlPhase"></span></strong></p>
+          <p>The driver's reaction time is <strong><span id="OnertRandom"></span></strong></p>
+          <p>The vehicle's tire conditions are described as <strong><span id="OnetireCondition"></span></strong></p>
+          <p>The weather conditions are described as <strong><span id="OneweatherCondition"></span></strong></p>
+          <p>The vehicle is <strong><span id="OnecarLength"></span></strong> m long</p>
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i>
             <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <h4>Your answers</h4>
@@ -509,9 +509,9 @@
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
             </div>
           </form>
-          <div><span id="MapOneResultOne"></span></div>
-          <div><span id="MapOneResultTwo"></span></div>
-          <div><span id="MapOneResultThree"></span></div>
+          <div><span id="OneResultOne"></span></div>
+          <div><span id="OneResultTwo"></span></div>
+          <div><span id="OneResultThree"></span></div>
         </div> <!-- End of the first modal-->
         <div class="modal-footer">
           <input type="submit" id="map-1-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
@@ -562,9 +562,9 @@
                 <span class="input-group-text">Your calculation</span>
               </div>
               <input 
-              type="text" 
+              type="number" 
               onkeypress="return isNumberKey(event)" 
-              oninput="validate(this)"  
+              onkeyup="return truncateDecimals(this, 2)" 
               id="userInputMapTwo" class="form-control" 
               min="0" 
               max="1000" 
@@ -630,9 +630,9 @@
                 <span class="input-group-text">Your calculation</span>
               </div>
               <input 
-              type="text" 
+              type="number" 
               onkeypress="return isNumberKey(event)" 
-              oninput="validate(this)"  
+              onkeyup="return truncateDecimals(this, 2)" 
               id="userInputMapThree" class="form-control" 
               min="0" 
               max="1000" 
@@ -698,9 +698,9 @@
                 <span class="input-group-text">Your calculation</span>
               </div>
               <input 
-              type="text" 
+              type="number" 
               onkeypress="return isNumberKey(event)" 
-              oninput="validate(this)" 
+              onkeyup="return truncateDecimals(this, 2)" 
               id="userInputMapFour" class="form-control" 
               min="0" 
               max="1000" 
@@ -766,9 +766,9 @@
                 <span class="input-group-text">Your Calculation</span>
               </div>
               <input 
-              type="text" 
+              type="number" 
               onkeypress="return isNumberKey(event)" 
-              oninput="validate(this)" 
+              onkeyup="return truncateDecimals(this, 2)" 
               id="userInputMapFive" 
               class="form-control" 
               min="0" 
@@ -857,7 +857,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="assets/scripts/maps.js"></script>
   <script src="assets/scripts/dependencies.js"></script>
-  <script src="assets/scripts/test_yourself.js"></script>
+  <script src="assets/scripts/refactor_test_yourself.js"></script>
   <script src="https://unpkg.com/@google/markerclustererplus@5.1.0/dist/markerclustererplus.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWKHz27Q-E_mW5wHULLj6Wgap3VOjrCbs&callback=initMap"></script>
   <div id="fb-root"></div>
