--- a/refactor_test_yourself.html
+++ b/refactor_test_yourself.html
@@ -477,13 +477,13 @@
           <form>
             <div class="form-check">
               <p>Choose one option</p>
-              <input class="form-check-input" type="radio" name="MapOneZone" id="dzCheckedMapOne" value="dzCheckedMapOne" checked>
+              <input class="form-check-input" type="radio" name="MapOneZone" id="dzCheckedOne" value="dzCheckedOne" checked>
               <label class="form-check-label" for="dzCheckedMapOne">
                 Dilemma Zone present
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="MapOneZone" id="ozCheckedMapOne" value="ozCheckedMapOne">
+              <input class="form-check-input" type="radio" name="MapOneZone" id="ozCheckedOne" value="ozCheckedOne">
               <label class="form-check-label" for="ozCheckedMapOne">
                 Option Zone present
               </label>
@@ -514,7 +514,7 @@
           <div><span id="OneResultThree"></span></div>
         </div> <!-- End of the first modal-->
         <div class="modal-footer">
-          <input type="submit" id="map-1-submit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+          <input type="submit" id="Onesubmit" class="btn btn-success btn-submit" value="&#x2713; Submit">
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
