FIx vanishing final equation on small screen

--- a/help.html
+++ b/help.html
@@ -292,23 +292,32 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 content-div">
+      <div class="col-lg-8 content-div d-none d-md-block d-lg-block d-xl-block">
         <div class="card shadow" id="card-help-text-final">
           <div class="card-body">
-            <p class="visibilityMedium">The final equation requires all the inputs for each variable.
+            <p>The final equation requires all the inputs for each variable.
               \[dist_{final} = { dist_{total} - dist_{intersection} - length}\]
               \[dist_{stopping} = { velocity^2 \over 2 \; μ \; g}\]
               \[zone = {dist_{final} - (dist_{stopping} + dist_{reaction})}\]
               Where g = 9.81 ms<sup>-2</sup></p>
             <p>If <em>zone</em> is negative, then a dilemma zone exists. If <em>zone</em> is positive, then an option zone exists.</p>
-            <p id="visibilitySmall">The final equation requires all the inputs for each variable. THIS IS ON A SMALL SCREEN ONLY
+          </div>
+        </div>
+      </div>
+
+ <div class="col-lg-8 content-div d-xs-block d-sm-block d-md-none d-lg-none">
+        <div class="card shadow" id="card-help-text-final2">
+          <div class="card-body">
+            <p>The final equation requires all the inputs for each variable.
               \[dist_{final} =\] \[{ dist_{total} - dist_{intersection} - length}\]
               \[dist_{stopping} = { velocity^2 \over 2 \; μ \; g}\]
               \[zone =\] \[{dist_{final} - (dist_{stopping} + dist_{reaction})}\]
               Where g = 9.81 ms<sup>-2</sup></p>
+            <p>If <em>zone</em> is negative, then a dilemma zone exists. If <em>zone</em> is positive, then an option zone exists.</p>
           </div>
         </div>
       </div>
+
     </div>
   </section>
 <!-- Friction help modal -->
