--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <div class="row pb-2">
 <div class="media">
 <!-- Author image appears on the left on medium and large devices -->
-  <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block" src="assets/images/author-questions.png" alt="The author">
+  <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block d-xl-block" src="assets/images/author-questions.png" alt="The author">
   <div class="media-body">
     <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
     <!-- Author image appears next to header on small devices -->
