--- a/refactor_test_yourself.html
+++ b/refactor_test_yourself.html
@@ -241,7 +241,8 @@
             <div class="text-center">
               <button 
               class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
-              id="randomScenarioMapOne" 
+              id="One"
+               
               data-toggle="modal" 
               data-target="#map-1-scene-1">
               <i class="fas fa-car-battery fa2x"></i> Scene</button>
