--- a/help.html
+++ b/help.html
@@ -304,8 +304,8 @@
           </div>
         </div>
       </div>
-
- <div class="col-lg-8 content-div d-xs-block d-sm-block d-md-none d-lg-none">
+<!-- Prevent overun for MathJax equation on small screens -->
+ <div class="col-lg-8 content-div d-xs-block d-sm-block d-md-none d-lg-none d-xl-none">
         <div class="card shadow" id="card-help-text-final2">
           <div class="card-body">
             <p>The final equation requires all the inputs for each variable.
