Fix refactor_test_yourself.js to prevent overwrite of global variable for mapNumber

--- a/refactor_test_yourself.html
+++ b/refactor_test_yourself.html
@@ -246,12 +246,12 @@
               data-toggle="modal" 
               data-target="#map-1-scene-1">
               <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button 
-              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
-              id="Onecurrent" 
+              <span 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" 
+              id="OneCurrent" 
               data-toggle="modal" 
               data-target="#map-1-scene-1" 
-              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
             </div>
           </div>
         </div>
@@ -294,12 +294,12 @@
               data-toggle="modal" 
               data-target="#map-2-scene-1">
               <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button 
-              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
-              id="Twocurrent" 
+              <span 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" 
+              id="TwoCurrent" 
               data-toggle="modal" 
               data-target="#map-2-scene-1" 
-              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
             </div>
           </div>
         </div>
@@ -342,12 +342,12 @@
               data-toggle="modal" 
               data-target="#map-3-scene-1">
               <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button 
-              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
-              id="Threecurrent" 
+              <span 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" 
+              id="ThreeCurrent" 
               data-toggle="modal" 
               data-target="#map-3-scene-1" 
-              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
             </div>
           </div>
         </div>
@@ -390,12 +390,12 @@
               data-toggle="modal" 
               data-target="#map-4-scene-1">
               <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button 
-              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
-              id="Fourcurrent" 
+              <span 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" 
+              id="FourCurrent" 
               data-toggle="modal" 
               data-target="#map-4-scene-1" 
-              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
             </div>
           </div>
         </div>
@@ -438,12 +438,12 @@
               data-toggle="modal" 
               data-target="#map-5-scene-1">
               <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button 
-              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
-              id="Fivecurrent" 
+              <span 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" 
+              id="FiveCurrent" 
               data-toggle="modal" 
               data-target="#map-5-scene-1" 
-              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
             </div>
           </div>
         </div>
